resolves #27 fix word wrap
* apply word-wrap anywhere to body
* reset word-wrap to normal for tables
* reapply word-wrap anywhere to admonition content cell
* disable hyphens in more cases
* move assignments with context

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -27,6 +27,7 @@ body {
   font-family: var(--body-font-family);
   line-height: var(--body-line-height);
   margin: 0;
+  word-wrap: anywhere; /* aka overflow-wrap; used when hyphens are disabled or aren't sufficient */
 }
 
 a {
